app/assets/stylesheets/new-place-form.css
#add-new-place {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: calc(100vw - 80px);
  margin: auto;
}

#add-place {
  font-size: 1.5rem;
  font-weight: 500;
  text-align: center;
  padding: 1rem 0 1rem 0;
}

#address-group {
  gap: 0;
}

#place_address {
  width: 100%;
  border-radius: 5px 5px 0 0;
}

#form-map {
  height: 7.875rem;
  border-radius: 0 0 0.313rem 0.313rem;
  border: 1px solid var(--gray);
  border-top: none;
  min-width: 240px;
  max-width: 572px;
}

#place_address:focus ~ #form-map {
  border: 1px solid var(--green);
  border-top: none;
}

/* #add-new-place-form {
  margin: 0 1.25rem 3rem 1.25rem;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  align-items: center;
  width: calc(100vw - 80px);
} */

/* .add-new-place-form-group {
  display: flex;
  flex-direction: column;
  gap: 0.125rem;
  width: 100%;
  max-width: 572px;
} */

.sub-group {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  width: 100%;
  max-width: 572px;
}

.select-wrapper {
  position: relative;
}

.tags-form {
  overflow: scroll;
  max-height: 131px;
  display: flex;
  flex-wrap: wrap;
  gap: 0.75rem;
  scrollbar-width: none;  /* Firefox */
}

.tags-form::-webkit-scrollbar {
  display: none;
}

.tag {
  border-radius: 0.313rem;
  border: 0.063rem solid var(--gray);
  padding: 0.625rem 0.5rem;
  display: inline-flex;
  align-items: center;
  gap: 0.25rem;
  width: auto;
  height: 42px;
}

.tag-select {
  width: 15px;
  height: 15px;
}

.tag-names {
  min-width: auto;
  max-width: unset;
}

/* Style image upload  */
#add-new-place-form select {
  width: 10.063rem;
  height: 2.625rem;
  border-radius: 0.313rem;
  border: 0.063rem solid var(--gray);
  font-size: 1rem;
  padding: 0.625rem 0.5rem;
}

#add-new-place-form input[type="submit"] {
  margin-top: 2.25rem;
  width: 15rem;
  height: 2.625rem;
  border-radius: 1.25rem;
  background: var(--green);
  color: var(--white);
  font-weight: 500;
  border: none;
  margin-right: auto;
  margin-left: auto;
}

.social-wrapper {
  width: 100%;
  display: flex;
  flex-direction: row-reverse;
}

#instagram-input {
  width: 100%;
}

#facebook-input {
  width: 100%;
}

#x-input {
  width: 100%;
}

.platform {
  height: 42px;
  top: 21px;
  padding: 10px 8px;
  border-radius: 5px 0 0 5px;
  border: 1px solid var(--gray);
  color: var(--gray);
  background-color: var(--ligth-gray);
}

.platform-input:focus {
  border-left: none;
}

.platform-input:focus ~ .platform {
  border-color: var(--green);
}

#submit-place {
  margin-bottom: 25px;
}

@media (min-width: 1024px) {
  #add-place {
    padding-top: 48px;
  }

  .add-new-place-form-group {
    width: 35.75rem;
  }

  #form-map {
    width: 35.75rem;
  }

  #add-new-place-form #place_images {
    width: 280px;
  }

  .sub-group {
    display: flex;
    flex-direction: row;
    gap: 0.75rem;
    width: 35.75rem;
  }

  .sub-group input {
    width: 280px;
  }

  .social-wrapper {
    & input {
      border-radius: 0 5px 5px 0;
      border-left: none;
    }

    display: flex;
    flex-direction: row-reverse;
  }

  #instagram-input {
    width: 146px;
  }

  #facebook-input {
    width: 152px;
  }

  #x-input {
    width: 211px;
  }

  #submit-place {
    align-items: center;
  }
}

